# fire-emblem-graphql-server

./: Pipfile  README.md  dev.py  pyproject.toml  schema.graphql  server.py
src/: app.py  constants.py  graphql.py  request.py  schema.graphql
src/loaders/: base_stats.py  heroes.py  skills.py
src/resolvers/: Date.py  Hero.py  HeroSkill.py  MoveType.py  Query.py  Rarity.py  WeaponType.py
src/schema/: Hero.py
