[tool.poetry]
name = "fire-emblem-graphql-server"
version = "0.1.0"
description = ""
authors = ["Andrew Hyndman <ajhyndman@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiodataloader = "^0.1.2"
aiohttp_requests = "^0.1.2"
starlette = "^0.11.4"
uvicorn = "^0.6.1"
ariadne = "^0.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "=18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
